<resources>
    <string name="app_name">BBQBar</string>
    <string name="booking">Бронь</string>
    <string name="schema_title">Схема столов</string>
    <string name="booking_title">Бронирование</string>
    <string name="your_name">Ваше имя</string>
    <string name="phone_number">Контактный номер</string>
    <string name="date">Дата</string>
    <string name="choose_date">Выберите дату</string>
    <string name="time">Время</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="comment">Комментарий (Необязательно)</string>
    <string name="book">Забронировать</string>
    <string name="book_for">Забронировать на:</string>
    <string name="no_internet_connection">Нету доступа к сети</string>
    <string name="select_time">Выберите время</string>
    <string name="that_is_right">Всё верно</string>
    <string name="cancel">Отмена</string>
    <string name="confirmation">Подтверждение</string>
    <string name="enter_name">Пожалуйста, введите имя</string>
    <string name="letters_spaces.">Имя может состоять только из букв и пробелов</string>
    <string name="pls_phone_number">Пожалуйста, введите номер телефона</string>
    <string name="pls_full_phone_number">Пожалуйста, полностью введите номер</string>
    <string name="busy">Занято</string>
    <string name="free">Свободно</string>
    <string name="done">Готово!</string>
    <string name="success">Столик успешно забронирован</string>
    <string name="ok">Ок</string>

</resources>
